[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/Pause Menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/Magero.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=34]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.278431, 0.854902, 0.290196, 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.278431, 0.854902, 0.290196, 0.588235 )

[sub_resource type="StyleBoxFlat" id=27]

[sub_resource type="DynamicFont" id=35]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.278431, 0.854902, 0.290196, 1 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.278431, 0.854902, 0.290196, 0.588235 )

[sub_resource type="DynamicFont" id=36]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.278431, 0.854902, 0.290196, 1 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.278431, 0.854902, 0.290196, 0.588235 )

[sub_resource type="StyleBoxFlat" id=26]

[node name="PauseMenu" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 60.0
margin_top = 106.0
margin_right = 640.0
margin_bottom = 458.0
color = Color( 0.427451, 0.407843, 0.407843, 1 )

[node name="Resume" type="Button" parent="."]
margin_left = 60.0
margin_top = 105.0
margin_right = 640.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 34 )
custom_styles/hover = SubResource( 31 )
custom_styles/pressed = SubResource( 28 )
custom_styles/normal = SubResource( 27 )
shortcut_in_tooltip = false
text = "RESUME"

[node name="Save" type="Button" parent="."]
margin_left = 60.0
margin_top = 220.0
margin_right = 640.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 35 )
custom_styles/hover = SubResource( 32 )
custom_styles/pressed = SubResource( 29 )
custom_styles/normal = SubResource( 27 )
text = "SAVE"

[node name="Main Menu" type="Button" parent="."]
margin_left = 60.0
margin_top = 340.0
margin_right = 640.0
margin_bottom = 460.0
custom_fonts/font = SubResource( 36 )
custom_styles/hover = SubResource( 33 )
custom_styles/pressed = SubResource( 30 )
custom_styles/focus = SubResource( 26 )
custom_styles/normal = SubResource( 27 )
text = "MAIN MENU"

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Main Menu" to="." method="_on_Quit_pressed"]
